fix: button styles on mobile

--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -32,6 +32,10 @@
   transition-timing-function: ease;
 }
 
+.button:hover svg {
+  color: var(--primary-500);
+}
+
 .button.inverted {
   border: 1px solid var(--primary-500);
   background-color: var(--white);
